# mec17xx-pac

./: .gitignore  Cargo.toml  README.md  build.rs  update
.github/workflows/: check.yml  nostd.yml
src/: lib.rs
src/chips/cec1702/: device.x  pac.rs
src/chips/cec1712/: device.x  pac.rs
src/chips/cec1734/: device.x  pac.rs
src/chips/cec1736/: pac.rs
src/chips/mec1701/: pac.rs
src/chips/mec1703/: pac.rs
src/chips/mec1704/: device.x  pac.rs
src/chips/mec1705/: device.x  pac.rs
src/chips/mec1721/: device.x  pac.rs
src/chips/mec1723_4/: device.x  pac.rs
src/chips/mec1727/: pac.rs
svd/: cec1702.svd  cec1712.svd  cec1734.svd  cec1736.svd  mec1701.svd  mec1703.svd  mec1704.svd  mec1705.svd  mec1721.svd  mec1723_4.svd  mec1727.svd  transforms.yaml
